--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<link rel='icon' href='https://music.youtube.com/favicon.ico'>
 	<title>YouTube Playlist Randomizer</title>
 	<link rel="stylesheet" href="style.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/flexibility/2.0.1/flexibility.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.12/vue.min.js"></script>
+	<script src="flexibility.js"></script>
+	<script src="vue.min.js"></script>
 	<style>
 		[v-cloak] {display: none !important;}
 	</style>
