--- a/index.html
+++ b/index.html
@@ -105,6 +105,6 @@
 	<script src="func.js"></script>
 	<script src="main.js"></script>
 	<script async defer src="https://buttons.github.io/buttons.js"></script>
-	<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "7d57976f302942c4bd84a847adf5c49c"}'></script>
+	<script defer src='beacon.min.js' data-cf-beacon='{"token": "7d57976f302942c4bd84a847adf5c49c"}'></script>
 </body>
 </html>
