--- a/index.html
+++ b/index.html
@@ -74,31 +74,32 @@
 				<div>Current playlist: {{playlistIDShort}} ({{cfg.videos}} videos) <button type="button" id="editBtn" name="button" @click="editPlaylist">Edit</button></div>
 				<div>Seed: {{cfg.seed}} | Position: {{cfg.pos+1}}/{{cfg.videos}} | Completions: {{cfg.lap}}</div>
 			</div>
-			<div class="playerwrap" v-show="tab == 2">
-				<div id="player"></div>
+			<div id="activePlaylist" v-show="tab == 2" v-cloak>
+				<div>Current playlist: {{playlistIDShort}} ({{cfg.videos}} videos) <button type="button" id="editBtn" name="button" @click="editPlaylist">Edit</button></div>
+				<div>Seed: {{cfg.seed}} | Position: {{cfg.pos+1}}/{{cfg.videos}} | Completions: {{cfg.lap}}</div>
 			</div>
 			<div class="mt20 controls" v-show="tab == 2" v-cloak>
-				<button @click="playPrevVideo" :disabled="cfg.pos == 0" title="⏮">
-					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
-						<path fill="#fff" d="M9.2 18.44c1.25.71 2.8-.19 2.8-1.63v-2.34l6.95 3.97c1.25.71 2.8-.19 2.8-1.63V8.7a1.87 1.87 0 0 0-2.8-1.63L12 11.03V8.69a1.88 1.88 0 0 0-2.8-1.63l-7.11 4.06a1.87 1.87 0 0 0 0 3.26l7.1 4.06Z"/>
-					</svg>					
+				<button @click="playPrevVideo" :disabled="cfg.pos == 0" title="⏮" style="width: 10vh; height: 10vh;">
+					<svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="none" viewBox="0 0 24 24">
+						<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 6v12m8-12v12l-8-6 8-6Z"/>
+					</svg>					  
 				</button>
-				<button @click="playPause" title="⏯">
-					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
-						<path fill="#fff" d="M15 6.75a.75.75 0 0 0-.75.75V18a.75.75 0 0 0 .75.75h.75a.75.75 0 0 0 .75-.75V7.5a.75.75 0 0 0-.75-.75H15Zm5.25 0a.75.75 0 0 0-.75.75V18c0 .41.34.75.75.75H21a.75.75 0 0 0 .75-.75V7.5a.75.75 0 0 0-.75-.75h-.75Zm-15.2.31a1.88 1.88 0 0 0-2.8 1.63v8.12a1.87 1.87 0 0 0 2.8 1.63l7.11-4.06a1.87 1.87 0 0 0 0-3.26l-7.1-4.06Z"/>
-					</svg>					
+				<button @click="playPause" title="⏯" style="width: 10vh; height: 10vh;">
+					<svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="none" viewBox="0 0 24 24">
+						<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 18V6l8 6-8 6Z"/>
+					</svg>					  
 				</button>
-				<button @click="playNextVideo" title="⏭">
-					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
-						<path fill="#fff" d="M5.05 7.06a1.88 1.88 0 0 0-2.8 1.63v8.12a1.87 1.87 0 0 0 2.8 1.63L12 14.47v2.34a1.87 1.87 0 0 0 2.8 1.63l7.11-4.06a1.87 1.87 0 0 0 0-3.26l-7.1-4.06A1.88 1.88 0 0 0 12 8.69v2.34L5.05 7.06Z"/>
+				<button @click="playNextVideo" title="⏭" style="width: 10vh; height: 10vh;">
+					<svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="none" viewBox="0 0 24 24">
+						<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 6v12M8 6v12l8-6-8-6Z"/>
 					</svg>
 				</button>
 			</div>
+			<div class="playerwrap" v-show="tab == 2">
+				<div id="player"></div>
+			</div>
     	</div>
 		<div id="eg" title="eg?"></div>
-		<div id="star">
-			<a class="github-button" href="https://github.com/remixer-dec/YouTubePlaylistRandomizer" data-icon="octicon-star" data-size="large" aria-label="Star on GitHub">Star on GitHub</a>
-		</div>
 	</div>
 	<script src="seeded_randomizers.js"></script>
 	<script src="https://www.youtube.com/iframe_api"></script>
