--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 			<div id="activePlaylist" v-show="tab == 2" v-cloak>
 				<div>Current playlist: {{playlistIDShort}} ({{cfg.videos}} videos) <button type="button" id="editBtn" name="button" @click="editPlaylist">Edit</button></div>
 				<div>Seed: {{cfg.seed}} | Position: {{cfg.pos+1}}/{{cfg.videos}} | Completions: {{cfg.lap}}</div>
+				<div>Video Title: {{videoTitle}}</div>
 			</div>
 			<div class="mt20 controls" v-show="tab == 2" v-cloak>
 				<button @click="playPrevVideo" :disabled="cfg.pos == 0" title="⏮" style="width: 10vh; height: 10vh;">
